# new-arrivals-chi

./: .env.testing  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  data_model.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: admin_template.md  bug_report.md  feature_request.md
.github/workflows/: format-and-fail.yml  run-tests.yml
docs/: architecture.md  changelog.md  index.md  values.md
docs/decisions/: architecture.md  authentication.md  backend_framework.md  database.md  design.md  frontend_framework.md  server.md
docs/design/: README.md  stakeholder_meetings.md
docs/endpoints/: admin.md  admin_auth.md  general_info.md  health.md  home.md  index.md  legal.md  org_auth.md  organization.md  search.md  static.md
docs/models/: data_model.md  model.md
docs/style_templates/: docstrings.md
frontend/templates/: home.html
new_arrivals_chi/: babel.cfg  compile_translations.py  es.po
new_arrivals_chi/app/: __init__.py  authorize.py  authorize_routes.py  config.py  constants.py  data_handler.py  database.py  en.po  logger_config.py  main copy.py  main.py  utils.py
new_arrivals_chi/app/languages/: en.json  es.json
new_arrivals_chi/app/migrations/: alembic.ini  env.py
new_arrivals_chi/app/static/: neighborhood_values.txt
new_arrivals_chi/app/templates/: about.html  add_organization.html  add_organization_success.html  admin_management.html  asylum_apply.html  asylum_info.html  base.html  change_password.html  dashboard.html  edit_organization.html  edit_organization_old.html  edit_profile.html  general.html  health.html  health_general.html  health_search.html  help.html  home.html  info.html  lawyers.html  legal.html  legal_asylum_apply.html  legal_asylum_info.html  legal_flow.html  legal_help.html  legal_parole_apply.html  legal_parole_info.html  legal_tps_apply.html  legal_tps_info.html  legal_vttc_apply.html  (+17 more)
new_arrivals_chi/migrations/: alembic.ini  env.py
tests/: README.md  app_home_test.py  auth_basic.py  auth_basic_test.py  auth_change_password_test.py  auth_security.py  auth_security_test.py  base_test.py  caching_test.py  conftest.py  constants.py  csrf_protection_test.py  db_test.py  example.py  example_test.py  legal_routes_test.py  org_test.py  readme.md  setup_fake_db.py  sql_injection.py  sql_injection_test.py  test_app_home.py  test_csrf_protection.py  test_example.py  utils.py  xss_test.py
(+37 files in other folders)
