[tool.poetry]
name = "new-arrivals-chi"
version = "0.1.0"
description = ""
authors = ["Aaron Haefner <aaronhaefner@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
flask = "^3.0.3"
ipython = "^8.24.0"
bs4 = "^0.0.2"
pytest-flask = "^1.3.0"
python-dotenv = "^1.0.1"
flask-migrate = "^4.0.7"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
faker = "^25.0.0"
flask-login = "^0.6.3"
pyopenssl = "^24.1.0"
password-strength = "^0.0.3.post2"
flask-bcrypt = "^1.0.1"
flask-testing = "^0.8.1"
flask-wtf = "^1.2.1"
bleach = "^6.1.0"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"new_arrivals_chi/migrations/*" = ["D103"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--ignore=tests/setup_fake_db.py"
